# reflection

./: .dockerignore  .gitignore  Dockerfile  config.example.yaml  crontab.example  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
src/gitverse_mirror/: config.py  main.py  mirror.py
src/reflection/: config.py  main.py  mirror.py  server.py
